2005-11-16  Roland McGrath  <roland@redhat.com>

	* configure.ac: Define HAVE_LIBASM and STANDALONE conditionals.
	In config.h, define ELFUTILS_HEADER macro.

2005-11-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am (all_SUBDIRS): Add backends.
	* configure.ac: Write backends/Makefile.

	* configure.ac: Add --enable-tests-rpath option.

2005-09-16  Roland McGrath  <roland@redhat.com>

	* configure.ac (ALLOW_UNALIGNED) [__ia64__ || __alpha__]:
	Don't set it, since on IA64 you get error messages for unaligned
	accesses, and on Alpha it's at least very slow.

2005-08-29  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac: Fix GCOV make condition generation.

2005-08-28  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac: Add --enable-gcov option.

2005-08-06  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac: Add --enable-gprof option.

2005-07-27  Roland McGrath  <roland@redhat.com>

	* Makefile.am (all_SUBDIRS): Put libdwfl before libdw.

2005-07-21  Roland McGrath  <roland@redhat.com>

	* configure.ac: Take --enable-libebl-subdir=DIR to set LIBEBL_SUBDIR.

2005-06-01  Roland McGrath  <roland@redhat.com>

	* Makefile.am (all_SUBDIRS): Add libdwfl.
	* configure.ac: Write libdwfl/Makefile.

2005-05-19  Roland McGrath  <roland@redhat.com>

	* configure.ac [AH_BOTTOM] (INTDECL, _INTDECL): New macros.

2005-05-10  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac: Define MODVERSION in config.h.

2005-02-22  Ulrich Drepper  <drepper@redhat.com>

	* Makefile.am (all_SUBDIRS): Don't add doc subdir for now.
	* configure.ac: Don't use doc subdir for now.

2005-02-15  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac: Remove AM_GNU_GETTEXT use.  Use only AM_PO_SUBDIRS.

2005-02-06  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac (AM_INIT_AUTOMAKE): Removed dist-bzip2.

	* Makefile.am (EXTRA_DIST): Remove splint.rc.
	* splint.rc: Removed.

2004-09-25  Ulrich Drepper  <drepper@redhat.com>

	* configure.ac: Make compile with gcc 4.0.
